# lsucpd

./: CMakeLists.txt  COPYING  CREDITS  ChangeLog  INSTALL  LICENSE  Makefile.am  README  cmake_del_artifacts.sh  configure.ac  lsucpd.spec  lsupd.spec
debian/: changelog  control  copyright
doc/: Makefile.am  lsucpd.8  lsucpd_json.8  lsupd.8  lsupd_json.8
src/: Makefile.am  bwprint.hpp  lsucpd.cpp  lsucpd.hpp  lsupd.cpp  make.txt  sg_pr2serr.c  sg_pr2serr.h  sgj_hr_pri_helper.cpp
